// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing PreviewFooter Component is refreshing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PreviewFooter
    onRefresh={[Function]}
    refreshing={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Styled(Footer)>
        <FilterPopup
          onFilterThunk={[Function]}
          onRef={[Function]}
          position={
            Object {
              "x": 0,
              "y": 0,
            }
          }
        />
        <Styled(FooterTab)>
          <Styled(Button)
            onPress={[Function]}
          >
            <Styled(Icon)
              name="menu"
              type="MaterialIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            disabled={true}
            onPress={[Function]}
            transparent={true}
          >
            <Styled(Icon)
              name="refresh"
              type="MaterialIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            onPress={[Function]}
          >
            <Styled(Icon)
              name="comment-plus-outline"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            onLayout={[Function]}
            onLongPress={[Function]}
            onPress={[Function]}
          >
            <Styled(Icon)
              name="sort-descending"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            onPress={[Function]}
          >
            <Styled(Icon)
              name="view-list"
              type="MaterialIcons"
            />
          </Styled(Button)>
        </Styled(FooterTab)>
      </Styled(Footer)>,
      "onLayout": [Function],
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <FilterPopup
            onFilterThunk={[Function]}
            onRef={[Function]}
            position={
              Object {
                "x": 0,
                "y": 0,
              }
            }
          />,
          <Styled(FooterTab)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="menu"
                type="MaterialIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              disabled={true}
              onPress={[Function]}
              transparent={true}
            >
              <Styled(Icon)
                name="refresh"
                type="MaterialIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="comment-plus-outline"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onLayout={[Function]}
              onLongPress={[Function]}
              onPress={[Function]}
            >
              <Styled(Icon)
                name="sort-descending"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="view-list"
                type="MaterialIcons"
              />
            </Styled(Button)>
          </Styled(FooterTab)>,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "onFilterThunk": [Function],
            "onRef": [Function],
            "parentHeight": undefined,
            "position": Object {
              "x": 0,
              "y": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="menu"
                  type="MaterialIcons"
                />
              </Styled(Button)>,
              <Styled(Button)
                disabled={true}
                onPress={[Function]}
                transparent={true}
              >
                <Styled(Icon)
                  name="refresh"
                  type="MaterialIcons"
                />
              </Styled(Button)>,
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="comment-plus-outline"
                  type="MaterialCommunityIcons"
                />
              </Styled(Button)>,
              <Styled(Button)
                onLayout={[Function]}
                onLongPress={[Function]}
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="sort-descending"
                  type="MaterialCommunityIcons"
                />
              </Styled(Button)>,
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="view-list"
                  type="MaterialIcons"
                />
              </Styled(Button)>,
            ],
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="menu"
                  type="MaterialIcons"
                />,
                "onPress": [Function],
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "menu",
                  "type": "MaterialIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="refresh"
                  type="MaterialIcons"
                />,
                "disabled": true,
                "onPress": [Function],
                "transparent": true,
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "refresh",
                  "type": "MaterialIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="comment-plus-outline"
                  type="MaterialCommunityIcons"
                />,
                "onPress": [Function],
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "comment-plus-outline",
                  "type": "MaterialCommunityIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="sort-descending"
                  type="MaterialCommunityIcons"
                />,
                "onLayout": [Function],
                "onLongPress": [Function],
                "onPress": [Function],
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "sort-descending",
                  "type": "MaterialCommunityIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="view-list"
                  type="MaterialIcons"
                />,
                "onPress": [Function],
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "view-list",
                  "type": "MaterialIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(Footer)>
          <FilterPopup
            onFilterThunk={[Function]}
            onRef={[Function]}
            position={
              Object {
                "x": 0,
                "y": 0,
              }
            }
          />
          <Styled(FooterTab)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="menu"
                type="MaterialIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              disabled={true}
              onPress={[Function]}
              transparent={true}
            >
              <Styled(Icon)
                name="refresh"
                type="MaterialIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="comment-plus-outline"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onLayout={[Function]}
              onLongPress={[Function]}
              onPress={[Function]}
            >
              <Styled(Icon)
                name="sort-descending"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="view-list"
                type="MaterialIcons"
              />
            </Styled(Button)>
          </Styled(FooterTab)>
        </Styled(Footer)>,
        "onLayout": [Function],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <FilterPopup
              onFilterThunk={[Function]}
              onRef={[Function]}
              position={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
            />,
            <Styled(FooterTab)>
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="menu"
                  type="MaterialIcons"
                />
              </Styled(Button)>
              <Styled(Button)
                disabled={true}
                onPress={[Function]}
                transparent={true}
              >
                <Styled(Icon)
                  name="refresh"
                  type="MaterialIcons"
                />
              </Styled(Button)>
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="comment-plus-outline"
                  type="MaterialCommunityIcons"
                />
              </Styled(Button)>
              <Styled(Button)
                onLayout={[Function]}
                onLongPress={[Function]}
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="sort-descending"
                  type="MaterialCommunityIcons"
                />
              </Styled(Button)>
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="view-list"
                  type="MaterialIcons"
                />
              </Styled(Button)>
            </Styled(FooterTab)>,
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onFilterThunk": [Function],
              "onRef": [Function],
              "parentHeight": undefined,
              "position": Object {
                "x": 0,
                "y": 0,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Styled(Button)
                  onPress={[Function]}
                >
                  <Styled(Icon)
                    name="menu"
                    type="MaterialIcons"
                  />
                </Styled(Button)>,
                <Styled(Button)
                  disabled={true}
                  onPress={[Function]}
                  transparent={true}
                >
                  <Styled(Icon)
                    name="refresh"
                    type="MaterialIcons"
                  />
                </Styled(Button)>,
                <Styled(Button)
                  onPress={[Function]}
                >
                  <Styled(Icon)
                    name="comment-plus-outline"
                    type="MaterialCommunityIcons"
                  />
                </Styled(Button)>,
                <Styled(Button)
                  onLayout={[Function]}
                  onLongPress={[Function]}
                  onPress={[Function]}
                >
                  <Styled(Icon)
                    name="sort-descending"
                    type="MaterialCommunityIcons"
                  />
                </Styled(Button)>,
                <Styled(Button)
                  onPress={[Function]}
                >
                  <Styled(Icon)
                    name="view-list"
                    type="MaterialIcons"
                  />
                </Styled(Button)>,
              ],
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Icon)
                    name="menu"
                    type="MaterialIcons"
                  />,
                  "onPress": [Function],
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "name": "menu",
                    "type": "MaterialIcons",
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Icon)
                    name="refresh"
                    type="MaterialIcons"
                  />,
                  "disabled": true,
                  "onPress": [Function],
                  "transparent": true,
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "name": "refresh",
                    "type": "MaterialIcons",
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Icon)
                    name="comment-plus-outline"
                    type="MaterialCommunityIcons"
                  />,
                  "onPress": [Function],
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "name": "comment-plus-outline",
                    "type": "MaterialCommunityIcons",
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Icon)
                    name="sort-descending"
                    type="MaterialCommunityIcons"
                  />,
                  "onLayout": [Function],
                  "onLongPress": [Function],
                  "onPress": [Function],
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "name": "sort-descending",
                    "type": "MaterialCommunityIcons",
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Icon)
                    name="view-list"
                    type="MaterialIcons"
                  />,
                  "onPress": [Function],
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "name": "view-list",
                    "type": "MaterialIcons",
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Testing PreviewFooter Component renders as expected with requiredProps 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PreviewFooter
    onRefresh={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Styled(Footer)>
        <FilterPopup
          onFilterThunk={[Function]}
          onRef={[Function]}
          position={
            Object {
              "x": 0,
              "y": 0,
            }
          }
        />
        <Styled(FooterTab)>
          <Styled(Button)
            onPress={[Function]}
          >
            <Styled(Icon)
              name="menu"
              type="MaterialIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            onPress={[Function]}
          >
            <Styled(Icon)
              name="refresh"
              type="MaterialIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            onPress={[Function]}
          >
            <Styled(Icon)
              name="comment-plus-outline"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            onLayout={[Function]}
            onLongPress={[Function]}
            onPress={[Function]}
          >
            <Styled(Icon)
              name="sort-descending"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            onPress={[Function]}
          >
            <Styled(Icon)
              name="view-list"
              type="MaterialIcons"
            />
          </Styled(Button)>
        </Styled(FooterTab)>
      </Styled(Footer)>,
      "onLayout": [Function],
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <FilterPopup
            onFilterThunk={[Function]}
            onRef={[Function]}
            position={
              Object {
                "x": 0,
                "y": 0,
              }
            }
          />,
          <Styled(FooterTab)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="menu"
                type="MaterialIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="refresh"
                type="MaterialIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="comment-plus-outline"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onLayout={[Function]}
              onLongPress={[Function]}
              onPress={[Function]}
            >
              <Styled(Icon)
                name="sort-descending"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="view-list"
                type="MaterialIcons"
              />
            </Styled(Button)>
          </Styled(FooterTab)>,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "onFilterThunk": [Function],
            "onRef": [Function],
            "parentHeight": undefined,
            "position": Object {
              "x": 0,
              "y": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="menu"
                  type="MaterialIcons"
                />
              </Styled(Button)>,
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="refresh"
                  type="MaterialIcons"
                />
              </Styled(Button)>,
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="comment-plus-outline"
                  type="MaterialCommunityIcons"
                />
              </Styled(Button)>,
              <Styled(Button)
                onLayout={[Function]}
                onLongPress={[Function]}
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="sort-descending"
                  type="MaterialCommunityIcons"
                />
              </Styled(Button)>,
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="view-list"
                  type="MaterialIcons"
                />
              </Styled(Button)>,
            ],
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="menu"
                  type="MaterialIcons"
                />,
                "onPress": [Function],
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "menu",
                  "type": "MaterialIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="refresh"
                  type="MaterialIcons"
                />,
                "disabled": undefined,
                "onPress": [Function],
                "transparent": undefined,
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "refresh",
                  "type": "MaterialIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="comment-plus-outline"
                  type="MaterialCommunityIcons"
                />,
                "onPress": [Function],
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "comment-plus-outline",
                  "type": "MaterialCommunityIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="sort-descending"
                  type="MaterialCommunityIcons"
                />,
                "onLayout": [Function],
                "onLongPress": [Function],
                "onPress": [Function],
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "sort-descending",
                  "type": "MaterialCommunityIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="view-list"
                  type="MaterialIcons"
                />,
                "onPress": [Function],
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "view-list",
                  "type": "MaterialIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(Footer)>
          <FilterPopup
            onFilterThunk={[Function]}
            onRef={[Function]}
            position={
              Object {
                "x": 0,
                "y": 0,
              }
            }
          />
          <Styled(FooterTab)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="menu"
                type="MaterialIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="refresh"
                type="MaterialIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="comment-plus-outline"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onLayout={[Function]}
              onLongPress={[Function]}
              onPress={[Function]}
            >
              <Styled(Icon)
                name="sort-descending"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="view-list"
                type="MaterialIcons"
              />
            </Styled(Button)>
          </Styled(FooterTab)>
        </Styled(Footer)>,
        "onLayout": [Function],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <FilterPopup
              onFilterThunk={[Function]}
              onRef={[Function]}
              position={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
            />,
            <Styled(FooterTab)>
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="menu"
                  type="MaterialIcons"
                />
              </Styled(Button)>
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="refresh"
                  type="MaterialIcons"
                />
              </Styled(Button)>
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="comment-plus-outline"
                  type="MaterialCommunityIcons"
                />
              </Styled(Button)>
              <Styled(Button)
                onLayout={[Function]}
                onLongPress={[Function]}
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="sort-descending"
                  type="MaterialCommunityIcons"
                />
              </Styled(Button)>
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="view-list"
                  type="MaterialIcons"
                />
              </Styled(Button)>
            </Styled(FooterTab)>,
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onFilterThunk": [Function],
              "onRef": [Function],
              "parentHeight": undefined,
              "position": Object {
                "x": 0,
                "y": 0,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Styled(Button)
                  onPress={[Function]}
                >
                  <Styled(Icon)
                    name="menu"
                    type="MaterialIcons"
                  />
                </Styled(Button)>,
                <Styled(Button)
                  onPress={[Function]}
                >
                  <Styled(Icon)
                    name="refresh"
                    type="MaterialIcons"
                  />
                </Styled(Button)>,
                <Styled(Button)
                  onPress={[Function]}
                >
                  <Styled(Icon)
                    name="comment-plus-outline"
                    type="MaterialCommunityIcons"
                  />
                </Styled(Button)>,
                <Styled(Button)
                  onLayout={[Function]}
                  onLongPress={[Function]}
                  onPress={[Function]}
                >
                  <Styled(Icon)
                    name="sort-descending"
                    type="MaterialCommunityIcons"
                  />
                </Styled(Button)>,
                <Styled(Button)
                  onPress={[Function]}
                >
                  <Styled(Icon)
                    name="view-list"
                    type="MaterialIcons"
                  />
                </Styled(Button)>,
              ],
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Icon)
                    name="menu"
                    type="MaterialIcons"
                  />,
                  "onPress": [Function],
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "name": "menu",
                    "type": "MaterialIcons",
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Icon)
                    name="refresh"
                    type="MaterialIcons"
                  />,
                  "disabled": undefined,
                  "onPress": [Function],
                  "transparent": undefined,
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "name": "refresh",
                    "type": "MaterialIcons",
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Icon)
                    name="comment-plus-outline"
                    type="MaterialCommunityIcons"
                  />,
                  "onPress": [Function],
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "name": "comment-plus-outline",
                    "type": "MaterialCommunityIcons",
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Icon)
                    name="sort-descending"
                    type="MaterialCommunityIcons"
                  />,
                  "onLayout": [Function],
                  "onLongPress": [Function],
                  "onPress": [Function],
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "name": "sort-descending",
                    "type": "MaterialCommunityIcons",
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Icon)
                    name="view-list"
                    type="MaterialIcons"
                  />,
                  "onPress": [Function],
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "name": "view-list",
                    "type": "MaterialIcons",
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Testing PreviewFooter Component renders in muted 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PreviewFooter
    muted={true}
    onRefresh={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Styled(Footer)>
        <FilterPopup
          onFilterThunk={[Function]}
          onRef={[Function]}
          position={
            Object {
              "x": 0,
              "y": 0,
            }
          }
        />
        <Styled(FooterTab)>
          <Styled(Button)
            onPress={[Function]}
          >
            <Styled(Icon)
              name="menu"
              type="MaterialIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            onPress={[Function]}
          >
            <Styled(Icon)
              name="view-list"
              type="MaterialIcons"
            />
          </Styled(Button)>
        </Styled(FooterTab)>
      </Styled(Footer)>,
      "onLayout": [Function],
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <FilterPopup
            onFilterThunk={[Function]}
            onRef={[Function]}
            position={
              Object {
                "x": 0,
                "y": 0,
              }
            }
          />,
          <Styled(FooterTab)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="menu"
                type="MaterialIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="view-list"
                type="MaterialIcons"
              />
            </Styled(Button)>
          </Styled(FooterTab)>,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "onFilterThunk": [Function],
            "onRef": [Function],
            "parentHeight": undefined,
            "position": Object {
              "x": 0,
              "y": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="menu"
                  type="MaterialIcons"
                />
              </Styled(Button)>,
              false,
              false,
              false,
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="view-list"
                  type="MaterialIcons"
                />
              </Styled(Button)>,
            ],
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="menu"
                  type="MaterialIcons"
                />,
                "onPress": [Function],
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "menu",
                  "type": "MaterialIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            false,
            false,
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="view-list"
                  type="MaterialIcons"
                />,
                "onPress": [Function],
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "view-list",
                  "type": "MaterialIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(Footer)>
          <FilterPopup
            onFilterThunk={[Function]}
            onRef={[Function]}
            position={
              Object {
                "x": 0,
                "y": 0,
              }
            }
          />
          <Styled(FooterTab)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="menu"
                type="MaterialIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="view-list"
                type="MaterialIcons"
              />
            </Styled(Button)>
          </Styled(FooterTab)>
        </Styled(Footer)>,
        "onLayout": [Function],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <FilterPopup
              onFilterThunk={[Function]}
              onRef={[Function]}
              position={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
            />,
            <Styled(FooterTab)>
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="menu"
                  type="MaterialIcons"
                />
              </Styled(Button)>
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="view-list"
                  type="MaterialIcons"
                />
              </Styled(Button)>
            </Styled(FooterTab)>,
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onFilterThunk": [Function],
              "onRef": [Function],
              "parentHeight": undefined,
              "position": Object {
                "x": 0,
                "y": 0,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Styled(Button)
                  onPress={[Function]}
                >
                  <Styled(Icon)
                    name="menu"
                    type="MaterialIcons"
                  />
                </Styled(Button)>,
                false,
                false,
                false,
                <Styled(Button)
                  onPress={[Function]}
                >
                  <Styled(Icon)
                    name="view-list"
                    type="MaterialIcons"
                  />
                </Styled(Button)>,
              ],
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Icon)
                    name="menu"
                    type="MaterialIcons"
                  />,
                  "onPress": [Function],
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "name": "menu",
                    "type": "MaterialIcons",
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              false,
              false,
              false,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Icon)
                    name="view-list"
                    type="MaterialIcons"
                  />,
                  "onPress": [Function],
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "name": "view-list",
                    "type": "MaterialIcons",
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
